# Notes

./: .gitignore  CMakeLists.txt  NoteEditor.qml  README.md  TopMenuBar.qml  jsonResurces.qrc  keywords.json  main.cpp  main.qml
Tools/: texthandler.cpp  texthandler.h
qml/: LeftBar.qml  NewFileWindow.qml  NewFileWindow.qml.autosave  NoteEditor.qml  SettingsWindow.qml  TopMenuBar.qml  main.qml
src/: Regex.hpp  texthandler.cpp  texthandler.h
src/CoreApp/: AppCore.cpp  AppCore.h  CoreApplication.cpp  CoreApplication.h
src/CoreApp/Models/: CategoryItem.cpp  CategoryItem.h  CategoryModel.cpp  CategoryModel.h  File.cpp  File.h
src/FileSystem/: FileHandler.cpp  FileHandler.h
src/Parsers/: JsonParser.cpp  JsonParser.h  JsonParser.hpp
src/TextEditor/: Regex.hpp  SyntaxHighlighter.cpp  SyntaxHighlighter.h  TextHandler.cpp  TextHandler.h  texthandler.cpp  texthandler.h
src/TextEditor/ClangAnalyzer/: CMakeLists.txt  ClangAnalyzer.cpp  ClangAnalyzer.h
src/TextHandler/: CMakeLists.txt  Regex.h  SyntaxHighlighter.cpp  SyntaxHighlighter.h  TextHandler.cpp  TextHandler.h
src/parsers/: IFileParser.hpp  JsonParser.cpp  JsonParser.hpp
